<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/edit_contacts_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:textStyle="normal"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:text="@string/create_contact_header_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contacts_header" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text|textNoSuggestions"
        android:imeOptions="actionDone"
        android:maxLength="40"
        android:hint="@string/name_hint_text"
        app:backgroundTint="@color/light_gray_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phone_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="phone"
        android:imeOptions="actionDone"
        android:maxLength="40"
        android:hint="@string/phone_hint_text"
        app:backgroundTint="@color/light_gray_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:maxLength="40"
        android:hint="@string/email_hint_text"
        app:backgroundTint="@color/light_gray_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_edit" />

    <Button
        android:id="@+id/save_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>